# base2026

./: .clang-tidy  CMakeLists.txt  README.md  SETUP.md  codestyle_checker.sh  run-clang-format.py
any/: CMakeLists.txt  README.md  any.hpp  any_test.cpp
array/: CMakeLists.txt  README.md  array.hpp  array_public_test.cpp  array_test.cpp
calculator/: CMakeLists.txt
calculator/calculator/: CMakeLists.txt  README.md  calculator_test.cpp  parser.cpp
calculator/polish_notation/: CMakeLists.txt  README.md  polish_notation_test.cpp
calculator/tokenize/: CMakeLists.txt  README.md  tokenize_test.cpp
frozen_set/: CMakeLists.txt  README.md  frozen_set_public_test.cpp
gcd/: CMakeLists.txt  README.md  gcd_public_test.cpp  gcd_test.cpp
geometry/: CMakeLists.txt  README.md  geometry_main.cpp
hangman_bot/: CMakeLists.txt  README.md  main.cpp
hangman_bot/bot/: README.md  bot.hpp
hangman_bot/game/: CMakeLists.txt  README.md  hangman_game_test.cpp
hangman_bot/word_generator/: CMakeLists.txt  README.md  word_generator_test.cpp  words.txt
inserter/: CMakeLists.txt  README.md  inserter_test.cpp
itertools/: CMakeLists.txt
itertools/enumerate/: CMakeLists.txt  README.md  enumerate_test.cpp
itertools/range/: CMakeLists.txt  README.md  range_test.cpp
itertools/reversed/: CMakeLists.txt  README.md  reversed_test.cpp
matrix/: CMakeLists.txt  README.md  matrix.h  matrix.hpp  matrix_test.cpp
move_iterator/: CMakeLists.txt  README.md  move_iterator_test.cpp
optional/: CMakeLists.txt  README.md  optional_test.cpp
quantity/: CMakeLists.txt  README.md  quantity_public_test.cpp  quantity_test.cpp
random/: CMakeLists.txt  README.md  random.h  random_public_test.cpp
rational/: CMakeLists.txt  README.md  rational.h  rational.hpp  rational_public_test.cpp  rational_test.cpp
reverse_iterator/: CMakeLists.txt  README.md  reverse_iterator_test.cpp
shared_ptr/: CMakeLists.txt  README.md  shared_ptr.hpp  shared_ptr_test.cpp
string/: CMakeLists.txt  README.md  string_test.cpp
string_view/: CMakeLists.txt  README.md  string_view.hpp  string_view_public_test.cpp  string_view_test.cpp
sum/: CMakeLists.txt  README.md  sum.hpp  sum_public_test.cpp  sum_test.cpp
unique_ptr/: CMakeLists.txt  README.md  unique_ptr_test.cpp
unordered_set/: CMakeLists.txt  README.md  unordered_set.hpp  unordered_set_test.cpp
vector/: CMakeLists.txt  README.md  vector.hpp  vector_test.cpp
vector2d/: CMakeLists.txt  README.md  vector2d_public_test.cpp  vector2d_quantity_public_test.cpp  vector2d_quantity_test.cpp  vector2d_test.cpp
